Added gwt module